Fix the issue when scrolling on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --app-bar-height: 70px;
 
   width: 100vw;
-  height: 100vh;
+  height: auto;
   overflow: scroll;
   background-color: var(--background-color);
 }
